--- a/backend/dsmeta/src/main/resources/application.properties
+++ b/backend/dsmeta/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8090
+server.port=${PORT:8090} 
 
 twilio.sid=${TWILIO_SID}
 twilio.key=${TWILIO_KEY}
@@ -14,4 +14,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true   
+spring.jpa.properties.hibernate.format_sql=true 
+
+
+
+
